--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "ladash": "^1.2.0",
+    "loadsh": "0.0.4",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-table-with-tree-grid": "^0.2.4",
